# physics-and-information-theory

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  REPRODUCIBILITY.md  REVIEWER_README.md  THEOREMS.md  pyproject.toml
docs/: README.md  breakthrough_continuum_lift_obstruction_plan.md  canonical_berezin_refinement.md  canonical_embedding_program.md  canonical_noncommutative_refinement_certificate_index.json  canonical_noncommutative_refinement_note.md  centrifugal_affine_master_kernel.md  centrifugal_conormal_interface_certificate.md  centrifugal_origin_master_kernel.md  centrifugal_skyrmion_bvp.md  centrifugal_skyrmion_completed_stress.md  centrifugal_skyrmion_conormal_blocks.md  centrifugal_skyrmion_deformation.md  centrifugal_skyrmion_forced_response.md  centrifugal_skyrmion_friedrichs_form.md  centrifugal_skyrmion_friedrichs_trace.md  centrifugal_skyrmion_frobenius.md  centrifugal_skyrmion_indicial_majorant.md  centrifugal_skyrmion_master_adjoint_enclosure.md  centrifugal_skyrmion_master_adjoint_feasibility.md  centrifugal_skyrmion_master_response.md  centrifugal_skyrmion_membrane_stress.md  centrifugal_skyrmion_origin.md  centrifugal_skyrmion_physical_response.md  centrifugal_skyrmion_rational_response_trials.md  centrifugal_skyrmion_riccati_coercivity.md  centrifugal_skyrmion_transformed_origin.md  centrifugal_skyrmion_variational.md  charged_reference_recovery.md  colleague_research_status_brief.md  collective_band_feshbach_gate.md  common_mode_locality_mismatch.md  conditional_universal_observer_tradeoff.md  continuum_lift_conditions.md  (+241 more)
(+687 files in other folders)
