[project]
name = "qgtoy"
version = "0.1.0"
description = "Exact small stabilizer-state and stabilizer-code verifiers for entanglement/QEC toy-universe searches."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
research-sdp = ["cvxpy>=1.9,<2"]
research-numerics = ["numpy>=2,<3"]

[tool.pytest.ini_options]
pythonpath = ["."]
