[project]
name = "qgtoy"
version = "0.1.0"
description = "Research code and certificates for finite-pointer observer entropy bounds."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
research-sdp = ["cvxpy>=1.9,<2"]
research-numerics = ["numpy>=2,<3"]

[tool.pytest.ini_options]
pythonpath = ["."]
